fixed content under Nav and z-index

--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -1,3 +1,5 @@
 .profileContent {
     border-top: solid 1px black;
+    padding-top: 70px;
+    
 }
